@@ -1,8 +1,16 @@
 docker-norikra
 ==============
 
-Dockerfile for norikra
+Dockerfile for Norikra
 
 ```
-docker run -d -p 26578:26578 -p 26571:26571 -v /var/tmp/norikra:/var/tmp/norikra:rw -t myfinder/docker-norikra norikra start --stats /var/tmp/norikra/stats.json -l /var/tmp/norikra
+docker run -d -p 26578:26578 -p 26571:26571 -v /var/norikra:/var/norikra:rw -t nekoruri/norikra
+
+docker run -d -p 26578:26578 -p 26571:26571 -v /var/norikra:/var/norikra:rw -t nekoruri/norikra \
+  -v -Xloggc:/var/norikra/gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps
 ```
+
+Inspired from myfinder/docker-norikra, matsuu/docker-norikra
+
+- https://github.com/myfinder/docker-norikra
+- https://github.com/matsuu/docker-norikra
